# delt-hit

./: .gitignore  README.md  environment.yaml  pyproject.toml  requirements.txt
documentation/: cli.md  overview.md
paper/: 251021_NF2_library_rechecked.xlsx  251021_NF2_library_rechecked_enumerate.xlsx  251021_NF2_library_rechecked_enumerate_v1.xlsx  251021_NF2_library_rechecked_no_empty_reactions.xlsx  feedback-louise.docx  protocols.docx  ~$251021_NF2_library_rechecked_enumerate_v1.xlsx  ~$otocols.docx
paper/experiment-rechecked/: cmds.sh  config.yaml
paper/experiment-rechecked-enum/: config.yaml
paper/experiment-rechecked-enum-v1/: config.yaml
proof-of-concept-libraries/: DP-LED.xlsx  analysis.yaml  run-NF2-with-precursors.sh  run-NF2.sh  run-delt-hit-end-to-end.sh  run-gb-minimal.sh  run-gb.sh  run-template-v2.sh  run-template.sh  selections_250812.xlsx  template.xlsx  template_minimal.xlsx  template_v0.xlsx  template_v2.xlsx  template_v3.xlsx
proof-of-concept-libraries/experiment-GB/: config.yaml
proof-of-concept-libraries/libraries/: 251021_NF2_library_rechecked.xlsx  260115_NF2_library_rechecked_with_precursors.xlsx
src/delt_core/cli/: init.py  main.py
src/delt_core/demultiplex/: __init__.py  parser.py  postprocess.py  preprocess.py
src/delt_core/quality_control/: plot_codon_hits.py  report.py
src/delt_hit/: utils.py
src/delt_hit/cli/: README.md  init.py  main.py
src/delt_hit/demultiplex/: __init__.py  parser.py  (+3 more)
supporting_material/: README.md  analysis.yaml  run.sh  template.xlsx
templates/: NF2.xlsx
tests/: enumerate.sh  enumerate_cli.py  print_report.py  test_enumerate.py
tests/demultiplex/: test_parse_excel.py
(+19 files in other folders)
